--- a/styles/style.css
+++ b/styles/style.css
@@ -25,15 +25,11 @@
     font-weight: 400;
     font-style: normal;
   }
-  main section{
-    max-width: 80%;
-    margin: 80px auto;
-  }
   .flex{
     display: flex;
   }
   .btn{
-    padding: 15px 40px;
+    padding: 12px 40px;
     border-radius: 35px;
     background-color: var(--primary-color);
     border: none;
@@ -42,7 +38,7 @@
     color: white;
   }
   .section-headline{
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
     text-align: center;
   }
@@ -120,9 +116,50 @@
     color: var(--primary-font);
     margin: 30px 0 50px 0;
   }
-
+  .banner-right{
+    position: relative;
+  }
+  .badge-1, .badge-2{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 1rem;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
+    position: absolute;
+    top: 23%;
+    right: -27%;
+    padding: 1rem 1.75rem 1rem 1.75rem;
+    z-index: -1;
+  }
+  .badge-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    top: 72%;
+    right: 72%;
+    z-index: 1;
+  }
+  .badge-circle{
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background: var(--primary-color);
+  }
+  .banner-right h1{
+    color: white;
+    font-size: 2.3rem;
+    font-weight: 900;
+  }
+  .banner-right p{
+    color: var(--primary-font);
+    width: max-content;
+  }
   /* main styes */
   /* Change Your Habits section styles */
+  .habits{
+    max-width: 80%;
+    margin: 80px auto;
+  }
   .fitness-habits{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -148,6 +185,8 @@
   }
   /* Run an Extra Mile Easily section styles*/
   .about-running{
+    max-width: 80%;
+    margin: 80px auto;
     background-color: rgb(34, 34, 34);
     border-radius: 18px;
     justify-content: center;
@@ -177,7 +216,129 @@
   .run-img{
    width: 40%;
     border-radius: 18px;
-   
-    /* background-size: cover;
-    background-position: center; */
+  }
+
+  /* BMI Calculator section styles */
+  .bmi-details{
+    background-color: rgb(34, 34, 34);
+  }
+  .bmi-content{
+    max-width: 80%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    padding: 3rem 0;
+  }
+  .chart, .calculation{
+    color: white;
+    width: 40%;
+  }
+  .chart{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .bmi-form{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    margin-bottom: 2rem;
+  }
+  table{
+    border: 1px solid white;
+    border-collapse: collapse;
+    margin-top: 50px;
+  }
+  td, th{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 0.5);
+    padding: 1rem 2rem;
+    text-align: center;
+  }
+  th{
+    color: white;
+  }
+  input, select{
+    color: rgba(255, 255, 255, 0.6);
+    border-radius: 8px;
+    padding: 13px 13px 13px 13px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: none;
+    outline: none;
+    font-size: 1rem;
+  }
+  option{
+    color: rgb(7, 48, 228);
+  }
+  /* Meet Our Team */
+  .team-meeting{
+    max-width: 80%;
+    margin: 80px auto;
+  }
+  .team-trainers{
+    display: grid;
+    grid-template-columns: repeat(3, 326px);
+    gap: 1.25rem;
+  }
+  .trainer{
+    position: relative;
+    height: 272px;
+  }
+  .trainer-info{
+    position: absolute;
+    top: 73%;
+    left: 3%;
+  }
+  .trainer-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 18px;
+    filter: brightness(80%);
+  }
+  .trainer-name{
+    color: white;
+  }
+  .trainer-description{
+    color: var(--primary-font);
+    font-size: 1.25rem;
+    font-weight: 700;
+  }
+  /* fitness footer styles */
+  footer{
+    background: rgba(255, 255, 255, 0.1);
+  }
+  .footer-section{
+    max-width: 80%;
+    margin: 0 auto;
+    height: auto;
+  }
+  .footer-details{
+    display: grid;
+    grid-template-columns: 445px repeat(2, 181px);
+    gap: 2.5rem;
+    padding: 3rem 0;
+  }
+  .foot-head{
+    font-size: 3.5rem;
+    font-weight: 800;
+    color: var(--primary-color);
+    margin-bottom: 1rem;
+  }
+  .foot-desc{
+    color: var(--primary-font);
+    text-decoration: none;
+  }
+  .contact-us{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  .contact-us h2{
+    color: white;
+  }
+  .footer-part{
+    border-top: 2px solid var(--primary-font);
+    color: var(--primary-font);
+    text-align: center;
+    padding: 1.75rem 0;
   }
