--- a/styles/respnosive.css
+++ b/styles/respnosive.css
@@ -1,3 +1,4 @@
+
 /* for mobile devices */
 @media screen and (max-width: 576px) {
     
@@ -8,21 +9,24 @@
         display: block;
         color: white;
     }
+    .brand-title{
+        font-size: 1.3rem;
+    }
     .banner{
         flex-direction: column;
     }
     .banner-text-container{
         width: 100%;
     }
+    .banner-text-container p{
+        margin-right: 0;
+      }
     .banner-title{
-        font-size: 2.2rem;
+        font-size: 1.4rem;
     }
     .btn{
-        font-size: 1rem;
-    }
-    .app-btn{
-        margin-left: 0;
-        margin-top: 1rem;
+        font-size: 0.95rem;
+        padding: 10px 20px;
     }
     .banner-img{
         width: 85%;
@@ -31,28 +35,32 @@
         top: 10%;
         right: -3%;
         border-radius: 0.5rem;
-        padding: 0.3rem 0.7rem;
+        padding: 0.75rem 0.25rem 0.75rem 0.75rem;
     }
     .badge-2{
         top: 65%;
-        right: 45%;
+        right: 40%;
     }
     .banner-right h1{
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     .banner-right p{
-        font-size: 0.8rem;
+        font-size: 0.75rem;
     }
     .badge-circle{
         width: 25px;
         height: 25px;
+    }
+    /* about-=story styles*/
+    .about-story{
+         flex-direction: column;
     }
     /* Change Your Habits section styles */
     .section-headline{
         width: 95%;
     }
     .section-title{
-        font-size: 1.7rem;
+        font-size: 1.3rem;
     }
     .section-brief{
         font-size: 1rem;
@@ -66,11 +74,17 @@
         flex-direction: column;
         padding: 1.2rem;
     }
+    .run-title{
+        font-size: 1.3rem;
+    }
     .mile-side{
         width: 100%;
       }
     .run-img{
         width: 100%;
+    }
+    .running-btn{
+        width: 170px;
     }
     /* BMI Calculator section styles */
     .bmi-content{
@@ -85,6 +99,9 @@
     .bmi-form{
         grid-template-columns: 1fr;
     }
+    #activity{
+        grid-column: 1 / span 1;
+      }
     /* Meet Our Team */
     .team-trainers{
         grid-template-columns: 1fr;
@@ -93,18 +110,25 @@
         height: 250px;
     }
     /* fitness footer styles */
+    .foot-head {
+        font-size: 1.8rem;
+    }
     .footer-details{
         grid-template-columns: 1fr;
     }
 }
+
 /* for medium devices */
-@media screen and (min-width: 576px) and (max-width: 993px) {
+@media screen and (min-width: 576px) and (max-width: 992px) {
     .banner{
         flex-direction: column;
     }
     .banner-text-container{
         width: 100%;
     }
+    .banner-text-container p{
+        margin-right: 0;
+      }
     .banner-title{
         font-size: 3rem;
     }
@@ -116,6 +140,10 @@
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
     }
+      /* about-=story styles*/
+      .about-story{
+        flex-direction: column;
+   }
     /* Run an Extra Mile Easily section styles */
       .about-running{
         flex-direction: column;
@@ -127,7 +155,8 @@
     .run-img{
         width: 100%;
     }
-        /* BMI Calculator section styles */
+        
+    /* BMI Calculator section styles */
     .bmi-content{
         flex-direction: column;
     }
@@ -140,7 +169,7 @@
     .bmi-form{
         grid-template-columns: repeat(2, 1fr);
     }
-        /* Meet Our Team */
+    /* Meet Our Team */
         .team-trainers{
             grid-template-columns: repeat(2, 1fr);
         }
