--- a/styles/respnosive.css
+++ b/styles/respnosive.css
@@ -99,7 +99,7 @@
     .bmi-form{
         grid-template-columns: 1fr;
     }
-    #activity{
+    .placeholder{
         grid-column: 1 / span 1;
       }
     /* Meet Our Team */
@@ -186,3 +186,14 @@
         grid-template-columns: 1fr;
     }
 }
+
+
+/* for large devices */
+/* @media screen and (min-width: 992px) and (max-width: 1200px) {
+    .bmi-form{
+        grid-template-columns: 1fr;
+    }
+    .placeholder{
+        grid-column: 1 / span 1;
+      }
+} */
