--- a/styles/style.css
+++ b/styles/style.css
@@ -265,10 +265,6 @@
   }
 
   /* BMI Calculator section styles */
-  .bmi-section{
-    max-width: 80%;
-    margin: 0 auto;
-  }
   .bmi-details{
     background-color: rgb(34, 34, 34);
   }
@@ -276,7 +272,6 @@
     max-width: 80%;
     margin: 0 auto;
     justify-content: center;
-    align-items: center;
     gap: 4rem;
     padding: 3rem 0;
   }
@@ -292,19 +287,15 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
   }
-#activity{
-  grid-column: 1 / span 2;
-}
   table{
     border-collapse: collapse;
-    margin-top: 50px;
   }
   td, th{
     border: 2px solid rgba(255, 255, 255, 0.1);
     color: rgba(255, 255, 255, 0.5);
-    padding: 1rem 2rem;
+    padding: 1rem 0;
     text-align: center;
   }
   th{
@@ -321,6 +312,16 @@
   }
   option{
     color: rgb(7, 48, 228);
+  }
+  .bmi-content h3{
+    margin-bottom: 1rem;
+  }
+  .gender, .calculation p{
+    color: gray;
+  }
+  .placeholder{
+    grid-column: 1 / span 2;
+    color: grey;
   }
   /* Meet Our Team */
   .team-meeting{
